[package]
name = "efflux"
version = "0.1.0"
authors = ["Alex Kinnane <akinnane@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.9.22"
clap =  "^2.33.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
